Fix for z-index

--- a/style/common.css
+++ b/style/common.css
@@ -37,14 +37,6 @@ body {
 	overflow: hidden;
 }
 
-#proeve {
-	position: fixed;
-	top: 0;
-	left: 0;
-	background-color: pink;
-	z-index: 4;
-}
-
 @media only screen and (max-width: 767px) {
 
 body {
@@ -283,6 +275,21 @@ section.demo:after {
 	color: white;
 }
 
+.component-index label:after {
+	content: " ";
+	display: block;
+	width: 29px;
+	height: 48px;
+	background-color: rgba(254,255,255,0.11);
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
+	border: 1px solid gray;
+	border-right-style: none;
+}
+
 .component-index .checklist label a {
 	display: block;
 	position: absolute;
@@ -298,7 +305,11 @@ section.demo:after {
 	bottom: 0;
 	left: 0;
 	transition: all 1s;
-	-webkit-transition: all 1s;
+	-webkit-transition: left 1s;
+}
+
+#download:target .component-index .checklist label a {
+	
 }
 
 .component-index a:before {
@@ -534,7 +545,6 @@ section.demo:after {
 /* @group Global navigation */
 
 #global-navigation {
-	background-color: #2F383F;
 	color: #33291A;
 	text-align: center;
 	line-height: 40px;
@@ -587,12 +597,37 @@ section.demo:after {
 	width: 50%;
 	text-align: center;
 	color: rgba(254,255,255,0.73);
+	background-color: #2F383F;
+	transition: all 1s;
+	position: relative;
+}
+
+#global-navigation a:hover {
+	background-color: #3c4a54;
 }
 
 #download:target #global-navigation a.download,
 #documentation:target #global-navigation a.documentation {
-	background-color: #efefef;
-	color: black;
+	background-color: #2F383F;
+	cursor: default;	
+}
+
+#download:target #global-navigation a.download:before,
+#documentation:target #global-navigation a.documentation:before {
+	content: " ";
+	
+	width: 0; 
+	height: 0; 
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	
+	border-top: 10px solid #2c373e;
+	display: block;
+	position: absolute;
+	left: 50%;
+	top: 40px;
+	margin-left: -10px;
+	
 }
 
 @media only screen and (max-width: 767px) {
@@ -600,10 +635,6 @@ section.demo:after {
 #global-navigation a {
 	font-size: 12px;
 } }
-
-#global-navigation a:hover {
-	background-color: rgba(0,0,0,0.18);
-}
 
 
 
